--- a/test.html
+++ b/test.html
@@ -1,3 +1,16 @@
-<h1> Hey. I'm a big heading </h1>
-<p> I'm a Paragraph element</p>
-<a href="https://google.com"target="_blank"> CLick me! I'm a link!</a>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<h1> Hey. I'm a big heading </h1>
+	<p> I'm a <b>Paragraph</b> element</p>
+	<a href="https://google.com"target="_blank"> CLick me! I'm a link!</a>
+	<p>my name is <br>
+	kitty cat</p>
+	<img src="">
+
+</body>
+</html>
