--- a/test.html
+++ b/test.html
@@ -7,10 +7,10 @@
 <body>
 	<h1> Hey. I'm a big heading </h1>
 	<p> I'm a <b>Paragraph</b> element</p>
-	<a href="https://google.com"target="_blank"> CLick me! I'm a link!</a>
+	<a href="https://google.com"target="_blank"> Click me! I'm a link!</a>
 	<p>my name is <br>
 	kitty cat</p>
-	<img src="">
+	<img src="https://www.theguardian.com/world/2020/apr/01/cats-can-infect-each-other-with-coronavirus-chinese-study-finds#img-1">
 
 </body>
 </html>
