--- a/Styletest.html
+++ b/Styletest.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Style Test</title>
+	<style type="text/css">
+		h1{
+			font-size: 30px;
+			color: salmon;
+		}
+	</style>
 </head>
 <body>
-	<h1 style="font-size: 30px; color: salmon ">Heading 1- 1</h1>
+	<h1>Heading 1- 1</h1>
 	<h1>Heading 1- 2</h1>
 	<h1>Heading 1- 3</h1>
 	<h2>Heading 2- 1</h2>
