--- a/CharlieBrown.html
+++ b/CharlieBrown.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Style Test</title>
+	<title>Charlie Brown</title>
 	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
-	<h1><span>Heading 1- 1</span></h1>
+	<header>
+		<img src="images/charliebrown2.jpeg">
+	</header>
+	<h1><span>Charlie Brown</span></h1>
 	<h1 class = "big">Heading 1- 2</h1>
 	<h1>Heading 1- 3</h1>
 	<h1 class = "big uppercase">Heading 2- 1</h2>
 	<h2 class = "uppercase">Heading 2- 2</h2>
-	<h1 class = "big">Heading 2- 3</h2>
 </body>
 </html>
