--- a/CharlieBrown.html
+++ b/CharlieBrown.html
@@ -13,5 +13,6 @@
 	<h1>Heading 1- 3</h1>
 	<h1 class = "big uppercase">Heading 2- 1</h2>
 	<h2 class = "uppercase">Heading 2- 2</h2>
+	<h1 class = "big">Heading 2- 3</h2>
 </body>
 </html>
