Wrote CSS for website

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<head>
 		<title>Charlie Brown</title>
 		<link rel="icon" href="images/charliebrown3.jpeg">
+		<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300&family=Indie+Flower&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/charlie.css">
 	</head>
 	<body>
 		<!-- header element-->
 		<header>
 			<img src="images/charliebrown3.jpeg">
+			<h1>Charlie Brown</h1>
 		</header>
 
 		<!-- main element -->
@@ -23,17 +26,22 @@
 				<li>He has a dog named snoopy</li>
 			</ol>
 			<!-- The Peanuts -->
+			<img src="images/peanutsgang.jpeg">
+			<p class="caption"> Charlie and his friends</p>
 			<h2>The Peanut's Gang</h2>
 			<p>Charlie Brown has a lot of friends, click on the links below to learn about them</p>
+			<img src="images/pepppatty.jpeg">
+			<img src="images/Lucy.jpeg">
+			<img src="images/Linus.jpeg">
 			<ul>
-				<li><a hrefhttps://en.wikipedia.org/wiki/Peppermint_Pattyli> Peppermint Patty</a> <img src="images/pepppatty.jpeg"></li>
-				<li><a hrefhttps://en.wikipedia.org/wiki/Lucy_van_Pelt> Lucy</a><img src="images/Lucy.jpeg"></li>
-				<li><a hrefhttps://en.wikipedia.org/wiki/Linus_van_Pelt> Linus </a><img src="images/Linus.jpeg"></li>
+				<li><a href "https://en.wikipedia.org/wiki/Peppermint_Patty"> Peppermint Patty</a></li>
+				<li><a href "https://en.wikipedia.org/wiki/Lucy_van_Pelt"> Lucy</a></li>
+				<li><a href "https://en.wikipedia.org/wiki/Linus_van_Pelt"> Linus </a></li>
 			</ul>
 		</main>
 		<!-- Footer Element -->
 		<footer>
-		<p>This site was created during a <a href "https://taptapkaboom.com'>Tap Tap Kaboom </a> class. &copy; Allison Spillane </p>			
+		<p>This site was created during a <a href "https://taptapkaboom.com">Tap Tap Kaboom </a> class. &copy; Allison Spillane </p>			
 		</footer>
 	</body>
 </html>
