--- a/index.html
+++ b/index.html
@@ -16,28 +16,36 @@
 
 		<!-- main element -->
 		<main>
+		
+		<div class="intro">
 			<h2>About Charlie Brown</h2>
 			<p>Charlie Brown is the child hero of the newspaper comic strip Peanuts. He is meek, kind, innocent and gentle hearted with many anxieties. </p>
 			<img src="images/charliebrown2.jpeg">
 			<!-- Characteristics -->
-			<ol>
+
+			<ol id="charlie">
 				<li>He wears a yellow shirt</li>
 				<li>He is insecure</li>
 				<li>He has a dog named snoopy</li>
 			</ol>
+		</div>
+		
 			<!-- The Peanuts -->
 			<img src="images/peanutsgang.jpeg">
 			<p class="caption"> Charlie and his friends</p>
+
 			<h2>The Peanut's Gang</h2>
+			<div class="peanuts"
 			<p>Charlie Brown has a lot of friends, click on the links below to learn about them</p>
 			<img src="images/pepppatty.jpeg">
 			<img src="images/Lucy.jpeg">
 			<img src="images/Linus.jpeg">
 			<ul>
-				<li><a href "https://en.wikipedia.org/wiki/Peppermint_Patty"> Peppermint Patty</a></li>
-				<li><a href "https://en.wikipedia.org/wiki/Lucy_van_Pelt"> Lucy</a></li>
-				<li><a href "https://en.wikipedia.org/wiki/Linus_van_Pelt"> Linus </a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Peppermint_Patty"target="_blank">Peppermint Patty</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Lucy_van_Pelt"target="_blank">Lucy</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Linus_van_Pelt"target="_blank">Linus</a></li>
 			</ul>
+		</div>
 		</main>
 		<!-- Footer Element -->
 		<footer>
